--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "generata": "^1.0.2",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   },
