--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
@@ -17,22 +16,27 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "generata": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
     "swagger-ui-express": "^5.0.1",
-    "yamljs": "^0.3.0"
+    "wait-port": "^1.1.0",
+    "yamljs": "^0.3.0",
+    "zod": "^4.0.16"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/yamljs": "^0.2.34",
     "prisma": "^6.13.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2",
-    "wait-port": "^1.1.0"
+    "typescript": "^5.9.2"
   }
 }
