--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,12 @@ services:
     restart: always
     ports:
       - "3000:3000"
-    environment:
-      DATABASE_URL: "postgresql://postgres:postgres@db:5432/realestate?schema=public"
+    env_file:
+      - .env           
     depends_on:
       - db
     volumes:
       - .:/app
+
 volumes:
   postgres_data:
