--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "uuid": "^11.1.0",
     "wait-port": "^1.1.0",
     "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "yamljs": "^0.3.0",
     "zod": "^4.0.16"
   },
