--- a/docs/paths/auth/upload-national-id.yaml
+++ b/docs/paths/auth/upload-national-id.yaml
@@ -1,39 +1,41 @@
 post:
   tags:
     - Auth
-  summary: Upload National ID (Front and Back)
-  description: Upload two images (front and back) of a user's national ID for verification. The uploaded files will be stored and linked to a new `nationalIdValidation` record for admin review.
+  summary: Submit National ID for verification
+  description: >
+    Links previously uploaded files (front and back images) to a new `NationalIdValidation` record for admin review.
+    The files must be uploaded first via the file upload endpoint to get their IDs.
   requestBody:
     required: true
     content:
-      multipart/form-data:
+      application/json:
         schema:
           type: object
           required:
             - userEmail
-            - nationalIdFront
-            - nationalIdBack
+            - frontImageId
             - nationalIdNumber
           properties:
-            nationalIdNumber:
-              type: string
-              description: Id Number of the user whose ID is being uploaded.
             userEmail:
               type: string
               format: email
               example: user@example.com
-              description: Email of the user whose ID is being uploaded.
-            nationalIdFront:
+              description: Email of the user whose ID is being submitted.
+            frontImageId:
               type: string
-              format: binary
-              description: Front image of the national ID.
-            nationalIdBack:
+              example: "b9f2c1a6-4b3f-4e14-9d5a-5c8f6a73a6a2"
+              description: ID of the file representing the front image of the National ID.
+            backImageId:
               type: string
-              format: binary
-              description: Back image of the national ID.
+              example: "a4d0a5cd-3fcb-45ad-8e3b-37b0ff3bbd21"
+              description: ID of the file representing the back image of the National ID (optional).
+            nationalIdNumber:
+              type: string
+              example: "29809162501234"
+              description: The user's national ID number.
   responses:
     "200":
-      description: National ID uploaded successfully
+      description: National ID submission created successfully
       content:
         application/json:
           schema:
@@ -41,30 +43,31 @@ post:
             properties:
               message:
                 type: string
-                example: National ID uploaded successfully
+                example: National ID submitted successfully
               validation:
                 type: object
-                description: Created nationalIdValidation record
                 properties:
                   id:
+                    type: integer
+                    example: 12
+                  userId:
+                    type: integer
+                    example: 5
+                  frontImageId:
                     type: string
-                    example: 5f8d0d55b54764421b7156c5
-                  userEmail:
+                    example: "b9f2c1a6-4b3f-4e14-9d5a-5c8f6a73a6a2"
+                  backImageId:
                     type: string
+                    example: "a4d0a5cd-3fcb-45ad-8e3b-37b0ff3bbd21"
                   nationalIdNumber:
                     type: string
-                  nationalIdFront:
-                    type: string
-                    example: https://cdn.example.com/uploads/nationalIds/front.jpg
-                  nationalIdBack:
-                    type: string
-                    example: https://cdn.example.com/uploads/nationalIds/back.jpg
+                    example: "29809162501234"
                   status:
                     type: string
                     enum: [PENDING, APPROVED, REJECTED]
                     example: PENDING
     "400":
-      description: Validation error or missing files
+      description: Missing or invalid file IDs
       content:
         application/json:
           schema:
@@ -72,7 +75,7 @@ post:
             properties:
               error:
                 type: string
-                example: Both front and back images are required
+                example: Front image file not found
     "404":
       description: User not found
       content:
